src/objects/Certificate__c.object
<CustomObject>
    <description>上岗证</description>
    <fields>
        <fullName>Delete_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>删除标志，false表示正常，true 表示删除</description>
        <label>Delete Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <description>域账号</description>
        <label>Domain</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Int_Status__c</fullName>
        <formula>IF(Status__c==&apos;已通过&apos;||Status__c==&apos;已完成&apos;, 100, IF(Status__c==&apos;学习中&apos;, 50, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Int Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductLine__c</fullName>
        <description>产品线</description>
        <label>Product Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>上岗证状态</description>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserCode__c</fullName>
        <description>工号</description>
        <label>UserCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <description>员工姓名</description>
        <label>UserName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Certificate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Domain__c</columns>
        <columns>UserCode__c</columns>
        <columns>Email__c</columns>
        <columns>ProductLine__c</columns>
        <columns>Status__c</columns>
        <columns>Int_Status__c</columns>
        <columns>Type__c</columns>
        <columns>UserName__c</columns>
        <columns>Delete_Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UserCode__c</field>
            <operation>greaterThan</operation>
            <value>59999</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Certificate Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>